# betaflight-configurator

./: .coderabbit.yaml  .editorconfig  .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.json  .npmrc  .nvmrc  .poc-marker.txt  .prettierignore  .sonarcloud.properties  .travis.yml  AGENTS.md  ANDROID.md  ANDROID_USB.md  ANDROID_USB_DEBUGGING.md  ANDROID_USB_STATUS.md  CAPACITOR_SERIAL_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGING_ANDROID.md  DFU_ANDROID_IMPLEMENTATION.md  DFU_FLASH_ISSUE.md  DOCKER.MD  DOCKER.md  DockerFile  MIGRATION.md  MOTORS_IMPLEMENTATION_COMPLETE.md  MOTORS_IMPLEMENTATION_GUIDE.md  MOTORS_TAB_MIGRATION_PLAN.md  NEXT_STEPS.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  WEBAUTHN_SETUP.md  android-env.sh  azure-pipelines.yml  (+31 more)
.devcontainer/: README.md  containerfile  devcontainer.json
.github/: ANDROID_SIGNING.md  Emax tinyhawk 3  copilot-instructions.md  issue_template.md  no-response.yml  pull_request_template.md  release.yml
.storybook/: main.js  preview.js
.vitebook/: App.vue  config.js
android/: build.gradle  capacitor.settings.gradle  settings.gradle  variables.gradle
capacitor-plugin-betaflight-serial/: .gitignore  package.json
capacitor-plugin-socket/: package.json
components/: eventBus.js  init.js
cordova/: build.json  build_template.json  config.xml  config_template.xml  network_security_config.xml  package.json  package_template.json  release.keystore  usb_device_filter.xml
css/: main.less  select2_custom.less  switchery_custom.less
gulp-appdmg/: index.js  package.json
images/: bf_icon.icns
js/: Beepers.js  Config.js  Features.js  MSPConfigProvider.js  RateCurve.js  analytics.js  backup_restore.js  boards.js  data_storage.js  default_huffman_tree.js  fc.js  gui.js  huffman.js  model.js  msp.js  nwjs_reload.js  peripherals.js  port_handler.js  release_checker.js  serial.js  serial_backend.js
libraries/: flightIndicators.js  google-analytics-bundle.js
locales/: smstiv_4
patches/: capacitor-plugin-usb-serial+0.0.6.patch
scripts/: MainActivity.kt  README.md  build-android-local.sh  check-tauri-prereqs.mjs  create-device-filter.sh  generate-downloads-index.mjs  patch-android-manifest.sh  patch-app-gradle.sh  patch-gradle-settings.sh  patch-led-locales.js  rename-tauri-bundles.mjs  setup-adb-wifi.sh  sync-tauri-version.mjs  sync-unified-targets.mjs  tauri-patch-android.sh  tauri-wifi.sh
src/: App.vue  changelog.html  eventPage.js  index.html  jonny_extreme_signal.js  main.css  main.html  main_cordova.html  (+2 more)
src-tauri/: .gitignore  Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  serial_android.rs  tcp.rs  udp.rs
(+1295 files in other folders)
