[package]
name = "betaflight-app"
version = "2026.6.0"
description = "Betaflight App"
authors = ["The Betaflight open source project."]
license = "GPL-3.0"
repository = "https://github.com/betaflight/betaflight-configurator"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-serialplugin = "2.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
