[package]
name = "betaflight-app"
version = "2026.6.0"
description = "Betaflight App"
authors = ["The Betaflight open source project."]
license = "GPL-3.0"
repository = "https://github.com/betaflight/betaflight-configurator"
edition = "2024"

[lib]
name = "betaflight_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# USB serial is desktop + Android only. iOS has no USB serial API, and
# tauri-plugin-serialplugin's iOS build path doesn't compile, so exclude it there.
[target.'cfg(not(target_os = "ios"))'.dependencies]
tauri-plugin-serialplugin = "2.21"

# Window size/position/maximized persistence is a desktop-only concept.
# Cargo can't evaluate tauri's `desktop` cfg here, so spell the platforms out.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
